# fastapi-kafka-chat

./: pyproject.toml
app/application/api/: main.py
docker_compose/: app.yaml
